# endstone_better_server

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/better_server/: __init__.py  listener.py
src/endstone_better_server/: __init__.py  better_server.py
