[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-better-server"
version = "0.1.0"
dependencies = []
authors = [
    { name = "Huang FTS427", email = "FTS427@outlook.com" },
]
description = "ZH-Server's plugin"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/https://github.com/ZH-Server/endstone_better_server"

[project.entry-points."endstone"]
better-server = "endstone_better_server:BetterServer"
